# go-enry

./: Makefile  README.md
.github/workflows/: pyTest.yml  python-wheels.yml
python/: README.md  build_enry.py  enry.py  pyproject.toml  requirements.txt  setup.py
python/enry/: definitions.py  utils.py
python/tests/: test_enry.py  test_memory.py
shared/: enry.go
